# agentzero

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  QUICKSTART.md  README.md  agentzero.dev.toml  cliff.toml  deny.toml  docker-compose.yml
crates/agentzero-acp/: Cargo.toml
crates/agentzero-acp/src/: lib.rs  protocol.rs  server.rs
crates/agentzero-audit/: Cargo.toml
crates/agentzero-audit/src/: encrypted.rs  lib.rs  sink.rs
crates/agentzero-auth/: Cargo.toml
crates/agentzero-auth/src/: lib.rs
crates/agentzero-autopilot/: Cargo.toml
crates/agentzero-autopilot/src/: cap_gate.rs  config.rs  lib.rs  loop_runner.rs  reaction_matrix.rs  stale_recovery.rs  store.rs  supabase.rs  trigger.rs  turso_store.rs  types.rs
crates/agentzero-autopilot/src/tools/: mission_status.rs  mod.rs  proposal_create.rs  proposal_vote.rs  trigger_fire.rs
crates/agentzero-bench/: Cargo.toml
crates/agentzero-bench/benches/: core_loop.rs  privacy.rs
crates/agentzero-bench/src/: lib.rs
crates/agentzero-bench/tests/: benchmark_scripts.rs
crates/agentzero-brain/: Cargo.toml
crates/agentzero-brain/src/: checkpoint.rs  config.rs  daily.rs  error.rs  fs.rs  health.rs  ingest.rs  init.rs  lib.rs  query.rs  review.rs  weekly.rs
crates/agentzero-channels/: Cargo.toml
crates/agentzero-channels/src/: ack_reactions.rs  commands.rs  drafts.rs  group_reply.rs  image_markers.rs  interruption.rs  leak_guard.rs  lib.rs  media.rs  outbound.rs  pipeline.rs  streaming.rs
crates/agentzero-channels/src/channels/: acp.rs  channel_setup.rs  clawdtalk.rs  cli.rs  dingtalk.rs  discord.rs  discord_history.rs  email.rs  feishu.rs  gmail_push.rs  helpers.rs  imessage.rs  irc.rs  lark.rs  linq.rs  matrix.rs  mattermost.rs  mod.rs  mqtt.rs  napcat.rs  nextcloud_talk.rs  nostr.rs  qq_official.rs  signal.rs  slack.rs  sms.rs  telegram.rs  transcription.rs  voice_wake.rs  wati.rs  webhook.rs  whatsapp.rs  whatsapp_storage.rs  whatsapp_web.rs
crates/agentzero-channels/tests/: e2e_channels.rs
crates/agentzero-cli/: Cargo.toml
crates/agentzero-cli/src/: app.rs  cli.rs  command_core.rs  commands.rs  coordination.rs  cost.rs  daemon.rs  doctor.rs  health.rs  heartbeat.rs  hooks.rs  identity.rs  lib.rs  main.rs  peripherals.rs  rag.rs  service.rs  tunnel.rs
crates/agentzero-cli/src/commands/: agent.rs  mod.rs  (+45 more)
crates/agentzero-cli/tests/: cli_integration.rs  daily_driver.rs  e2e.rs
crates/agentzero-common/: Cargo.toml
crates/agentzero-common/src/: lib.rs  util.rs
crates/agentzero-config/: Cargo.toml
crates/agentzero-config-ui/: Cargo.toml  build.rs
crates/agentzero-config-ui/src/: agents_api.rs  api.rs  lib.rs  schema.rs  server.rs  toml_bridge.rs
crates/agentzero-config-ui/ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
crates/agentzero-config/src/: agents.rs  lib.rs  loader.rs  model.rs  policy.rs  security_policy.rs  skills.rs  templates.rs  tests.rs  watcher.rs  writer.rs
crates/agentzero-connectors/: Cargo.toml
crates/agentzero-connectors/src/: event_sync.rs  lib.rs  registry.rs  sync_engine.rs
crates/agentzero-connectors/tests/: end_to_end.rs
crates/agentzero-core/: Cargo.toml
crates/agentzero-core/src/: a2a_types.rs  action.rs  agent.rs  agent_store.rs  at_routing.rs  canvas.rs  complexity.rs  context_compression.rs  crypto.rs  delegation.rs  embedding.rs  event_bus.rs  id.rs  lib.rs  loop_detection.rs  metrics.rs  path_validator.rs  redaction.rs  regression.rs  regression_bus.rs  routing.rs  search.rs  secret.rs  tool_middleware.rs  trust.rs  types.rs  validation.rs  vault.rs
crates/agentzero-cron/: Cargo.toml
crates/agentzero-cron/src/: lib.rs
crates/agentzero-crypto/: Cargo.toml
crates/agentzero-crypto/src/: hash.rs  key.rs  lib.rs
crates/agentzero-daemon/: Cargo.toml
crates/agentzero-daemon/src/: lib.rs
crates/agentzero-delegation/: Cargo.toml
crates/agentzero-delegation/src/: lib.rs
crates/agentzero-doctor/: Cargo.toml
crates/agentzero-doctor/src/: lib.rs
crates/agentzero-ffi/: Cargo.toml  package.json
crates/agentzero-ffi/src/: lib.rs  node_bindings.rs  privacy_types.rs
crates/agentzero-gateway/: Cargo.toml
crates/agentzero-gateway/src/: a2a.rs  agent_router.rs  api_docs.html  api_keys.rs  audit.rs  auth.rs  autopilot_routes.rs  banner.rs  canvas.rs  config.rs  extractors.rs  gateway_channel.rs  gateway_metrics.rs  handlers.rs  key_rotation.rs  lib.rs  middleware.rs  models.rs  noise_handshake.rs  noise_middleware.rs  openapi.rs  privacy_state.rs  relay.rs  router.rs  slack.rs  state.rs  tests.rs  token_store.rs  tool_execute.rs  util.rs  workflow_dispatch.rs
crates/agentzero-gateway/tests/: load_baseline.rs
crates/agentzero-hardware/: Cargo.toml
crates/agentzero-hardware/src/: lib.rs
crates/agentzero-index/: Cargo.toml
crates/agentzero-index/src/: chunk.rs  embed.rs  lib.rs  parse.rs  query.rs  store.rs
crates/agentzero-infra/: Cargo.toml
crates/agentzero-infra/src/: audio.rs  audit.rs  cost_tracker.rs  insights.rs  lib.rs  mcp_server.rs  pattern_capture.rs  runtime.rs  sender_rate_limiter.rs  telemetry.rs  tool_evolver.rs  tool_recipes.rs  tool_selection.rs  trajectory.rs
crates/agentzero-infra/tests/: e2e_local_llm.rs  e2e_mock_provider.rs  e2e_ollama.rs  integration_with_testkit.rs  runtime_integration.rs
crates/agentzero-local/: Cargo.toml
crates/agentzero-local/src/: discovery.rs  health.rs  lib.rs  models.rs  pull.rs
crates/agentzero-macros/: Cargo.toml
crates/agentzero-macros/src/: lib.rs  tool_attr.rs  tool_fn.rs  tool_schema.rs
crates/agentzero-macros/tests/: tool_fn_tests.rs
crates/agentzero-mcp/: Cargo.toml
crates/agentzero-mcp/src/: lib.rs  protocol.rs  server.rs
crates/agentzero-memory-sqlite/: Cargo.toml
crates/agentzero-memory-sqlite/src/: lib.rs
crates/agentzero-memory-turso/: Cargo.toml
crates/agentzero-memory-turso/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_gossip_frame.rs  fuzz_http_path.rs  fuzz_json_event.rs  fuzz_toml_config.rs  fuzz_websocket.rs
(+782 files in other folders)
