[workspace]
members = [
  "bin/agentzero",
  "bin/agentzero-lite",
  "crates/agentzero-auth",
  "crates/agentzero-testkit",
  "crates/agentzero-cli",
  "crates/agentzero-config",
  "crates/agentzero-core",
  "crates/agentzero-infra",
  "crates/agentzero-tools",
  "crates/agentzero-providers",
  "crates/agentzero-plugins",
  "crates/agentzero-gateway",
  "crates/agentzero-orchestrator",
  "crates/agentzero-channels",
  "crates/agentzero-storage",
  "crates/agentzero-plugin-sdk",
  "crates/agentzero-config-ui",
  "crates/agentzero-autopilot",
  "crates/agentzero-macros",
]
default-members = ["bin/agentzero"]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "AgentZero — modular AI-agent runtime and tool framework"
repository = "https://github.com/auser/agentzero"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum-server = { version = "0.7", default-features = false }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
dotenvy = "0.15"
agentzero-autopilot = { path = "crates/agentzero-autopilot", version = "0.10.0" }
agentzero-auth = { path = "crates/agentzero-auth", version = "0.10.0" }
agentzero-channels = { path = "crates/agentzero-channels", version = "0.10.0" }
agentzero-cli = { path = "crates/agentzero-cli", default-features = false, version = "0.10.0" }
agentzero-config = { path = "crates/agentzero-config", version = "0.10.0" }
agentzero-core = { path = "crates/agentzero-core", version = "0.10.0" }
agentzero-gateway = { path = "crates/agentzero-gateway", version = "0.10.0" }
agentzero-orchestrator = { path = "crates/agentzero-orchestrator", version = "0.10.0" }
agentzero-infra = { path = "crates/agentzero-infra", default-features = false, version = "0.10.0" }
agentzero-plugins = { path = "crates/agentzero-plugins", default-features = false, version = "0.10.0" }
agentzero-providers = { path = "crates/agentzero-providers", version = "0.10.0" }
agentzero-storage = { path = "crates/agentzero-storage", default-features = false, version = "0.10.0" }
agentzero-testkit = { path = "crates/agentzero-testkit", version = "0.10.0" }
agentzero-tools = { path = "crates/agentzero-tools", default-features = false, version = "0.10.0" }
agentzero-plugin-sdk = { path = "crates/agentzero-plugin-sdk", version = "0.10.0" }
agentzero-config-ui = { path = "crates/agentzero-config-ui", version = "0.10.0" }
agentzero-macros = { path = "crates/agentzero-macros", version = "0.10.0" }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rusqlite = { version = "0.31", default-features = false }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "fs", "process", "sync", "io-util", "io-std", "signal", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
glob = "0.3"
regex = "1"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect"] }
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
chacha20poly1305 = "0.10"
cpal = "0.15"
hound = "3.5"
crypto_box = "0.9"
sha2 = "0.10"
snow = "0.9"
x25519-dalek = { version = "2", features = ["static_secrets"] }
dashmap = "6"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
wasmi = "1"
wasmi_wasi = "1"
llama-cpp-2 = { version = "0.1", default-features = false }
candle-core = { version = "=0.10.0", default-features = false }
candle-nn = { version = "=0.10.0", default-features = false }
candle-transformers = { version = "=0.10.0", default-features = false }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
outlines-core = { version = "0.2", default-features = false }
text-splitter = { version = "0.29", default-features = false, features = ["markdown"] }
tantivy = { version = "0.22", default-features = false, features = ["mmap"] }
hnsw_rs = "0.3"
hf-hub = "0.5"
indicatif = "0.17"
wiremock = "0.6"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[profile.release-min]
inherits = "release"
lto = "fat"
opt-level = "z"

[profile.release-min.package."*"]
opt-level = "z"
