[workspace]
resolver = "2"
members = [
    ".",
    "crates/agentzero-audit",
    "crates/agentzero-cli",
    "crates/agentzero-core",
    "crates/agentzero-policy",
    "crates/agentzero-sandbox",
    "crates/agentzero-session",
    "crates/agentzero-skills",
    "crates/agentzero-tools",
    "crates/agentzero-tracing",
]

[package]
name = "agentzero"
version = "0.1.0"
description = "AgentZero: secure AI agent runtime — facade crate re-exporting all sub-crates"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentzero-audit = { workspace = true }
agentzero-core = { workspace = true }
agentzero-policy = { workspace = true }
agentzero-sandbox = { workspace = true }
agentzero-session = { workspace = true }
agentzero-skills = { workspace = true }
agentzero-tools = { workspace = true }
agentzero-tracing = { workspace = true }

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/auser/agentzero"

[workspace.dependencies]
agentzero = { path = "." }
agentzero-audit = { path = "crates/agentzero-audit" }
agentzero-core = { path = "crates/agentzero-core" }
agentzero-policy = { path = "crates/agentzero-policy" }
agentzero-sandbox = { path = "crates/agentzero-sandbox" }
agentzero-session = { path = "crates/agentzero-session" }
agentzero-skills = { path = "crates/agentzero-skills" }
agentzero-tools = { path = "crates/agentzero-tools" }
agentzero-tracing = { path = "crates/agentzero-tracing" }

# External dependencies
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
