[package]
name = "agentzero-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
agentzero-core = { path = "../crates/agentzero-core" }
agentzero-config = { path = "../crates/agentzero-config" }
serde_json = "1"
toml = "0.8"

# Prevent this from interfering with workspace
[workspace]

[[bin]]
name = "fuzz_toml_config"
path = "fuzz_targets/fuzz_toml_config.rs"
doc = false

[[bin]]
name = "fuzz_json_event"
path = "fuzz_targets/fuzz_json_event.rs"
doc = false

[[bin]]
name = "fuzz_gossip_frame"
path = "fuzz_targets/fuzz_gossip_frame.rs"
doc = false

[[bin]]
name = "fuzz_http_path"
path = "fuzz_targets/fuzz_http_path.rs"
doc = false

[[bin]]
name = "fuzz_websocket"
path = "fuzz_targets/fuzz_websocket.rs"
doc = false
