[package]
name = "agentzero-acp"
version = "0.1.0"
description = "Agent Control Protocol adapter for AgentZero (editor integration)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentzero-core = { workspace = true }
agentzero-policy = { workspace = true }
agentzero-session = { workspace = true }
agentzero-tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
