[package]
name = "agentzero-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
agentzero-storage = { workspace = true }
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
temp-env = "0.3"
