[package]
name = "agentzero-autopilot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Autonomous company loop — proposals, missions, cap gates, triggers, and reaction matrix"
repository.workspace = true

[dependencies]
agentzero-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
