[package]
name = "agentzero-autopilot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Autonomous company loop — proposals, missions, cap gates, triggers, and reaction matrix"
repository.workspace = true

[features]
memory-turso = ["dep:libsql"]

[dependencies]
libsql = { version = "0.6", optional = true }
agentzero-core = { workspace = true }
agentzero-macros = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
