[package]
name = "agentzero-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[dependencies]
agentzero-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "core_loop"
harness = false
