[package]
name = "agentzero-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[features]
default = []
privacy = ["agentzero-core/privacy"]

[dependencies]
agentzero-core = { workspace = true }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "core_loop"
harness = false

[[bench]]
name = "privacy"
harness = false
required-features = ["privacy"]
