[package]
name = "agentzero-brain"
version = "0.1.0"
description = "Personal LLM wiki plugin for AgentZero"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
