[package]
name = "agentzero-channels"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
agentzero-config = { workspace = true }
agentzero-leak-guard = { workspace = true }
agentzero-security = { workspace = true }
agentzero-storage = { workspace = true }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# Feature-gated channel dependencies
reqwest = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[features]
default = ["channel-cli", "channel-webhook"]
channel-cli = []
channel-telegram = ["reqwest"]
channel-discord = ["reqwest", "tokio-tungstenite", "futures-util"]
channel-slack = ["reqwest", "futures-util"]
channel-mattermost = ["reqwest"]
channel-email = []
channel-irc = []
channel-webhook = []
channel-matrix = ["reqwest"]
channel-whatsapp = ["reqwest"]
channel-lark = ["reqwest"]
channel-feishu = ["reqwest"]
channel-dingtalk = ["reqwest"]
channel-nextcloud-talk = ["reqwest"]
channel-linq = ["reqwest"]
channel-wati = ["reqwest"]
channel-qq-official = ["reqwest"]
channel-napcat = ["reqwest"]
channel-acp = ["reqwest"]
channel-clawdtalk = ["reqwest"]
channel-signal = ["reqwest"]
channel-imessage = []
channel-nostr = ["tokio-tungstenite", "futures-util"]
all-channels = [
    "channel-cli",
    "channel-telegram",
    "channel-discord",
    "channel-slack",
    "channel-mattermost",
    "channel-email",
    "channel-irc",
    "channel-webhook",
    "channel-matrix",
    "channel-whatsapp",
    "channel-lark",
    "channel-feishu",
    "channel-dingtalk",
    "channel-nextcloud-talk",
    "channel-linq",
    "channel-wati",
    "channel-qq-official",
    "channel-napcat",
    "channel-acp",
    "channel-clawdtalk",
    "channel-signal",
    "channel-imessage",
    "channel-nostr",
]
