[package]
name = "agentzero-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Platform integrations (Telegram, Discord, Slack) for AgentZero"
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
agentzero-config = { workspace = true }
agentzero-core = { workspace = true }
agentzero-providers = { workspace = true }
agentzero-storage = { workspace = true }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# Feature-gated channel dependencies
reqwest = { workspace = true, optional = true, features = ["multipart"] }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
hound = { workspace = true, optional = true }

[features]
default = ["channel-cli", "channel-webhook"]
channel-cli = []
channel-telegram = ["reqwest"]
channel-discord = ["reqwest", "tokio-tungstenite", "futures-util"]
channel-slack = ["reqwest", "tokio-tungstenite", "futures-util"]
channel-mattermost = ["reqwest"]
channel-discord-history = ["reqwest", "tokio-tungstenite", "futures-util"]
channel-email = []
channel-gmail-push = ["reqwest"]
channel-irc = []
channel-webhook = []
channel-matrix = ["reqwest"]
channel-whatsapp = ["reqwest"]
channel-lark = ["reqwest"]
channel-feishu = ["reqwest"]
channel-dingtalk = ["reqwest"]
channel-nextcloud-talk = ["reqwest"]
channel-linq = ["reqwest"]
channel-wati = ["reqwest"]
channel-qq-official = ["reqwest"]
channel-napcat = ["reqwest"]
channel-acp = ["reqwest"]
channel-clawdtalk = ["reqwest"]
channel-signal = ["reqwest"]
channel-imessage = []
channel-mqtt = []
channel-transcription = []
channel-whatsapp-web = []
channel-nostr = ["tokio-tungstenite", "futures-util"]
channel-sms = ["reqwest"]
channel-voice-wake = ["cpal", "hound", "reqwest"]
tls-rustls = ["reqwest?/rustls-tls", "tokio-tungstenite?/rustls-tls-native-roots"]
tls-native = ["reqwest?/native-tls", "tokio-tungstenite?/native-tls"]
channels-standard = [
    "channel-cli",
    "channel-telegram",
    "channel-discord",
    "channel-slack",
    "channel-mattermost",
    "channel-matrix",
    "channel-signal",
    "channel-email",
    "channel-irc",
    "channel-nostr",
    "channel-webhook",
    "channel-whatsapp",
    "channel-sms",
]
all-channels = [
    "channel-cli",
    "channel-telegram",
    "channel-discord",
    "channel-discord-history",
    "channel-slack",
    "channel-mattermost",
    "channel-email",
    "channel-gmail-push",
    "channel-irc",
    "channel-webhook",
    "channel-matrix",
    "channel-whatsapp",
    "channel-mqtt",
    "channel-transcription",
    "channel-whatsapp-web",
    "channel-voice-wake",
    "channel-lark",
    "channel-feishu",
    "channel-dingtalk",
    "channel-nextcloud-talk",
    "channel-linq",
    "channel-wati",
    "channel-qq-official",
    "channel-napcat",
    "channel-acp",
    "channel-clawdtalk",
    "channel-signal",
    "channel-imessage",
    "channel-nostr",
    "channel-sms",
]

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
