[package]
name = "agentzero-cli"
version = "0.1.0"
description = "CLI entrypoint for AgentZero"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "az"
path = "src/main.rs"

[features]
default = ["wasm"]
wasm = ["agentzero/wasm"]
rag = ["agentzero/rag"]

[dependencies]
agentzero = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
