[package]
name = "agentzero-cli"
version = "0.1.0"
description = "CLI entrypoint for AgentZero"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "az"
path = "src/main.rs"

[features]
default = ["wasm"]
wasm = ["agentzero/wasm"]
rag = ["agentzero/rag"]
mcp = ["agentzero/mcp"]

[dependencies]
agentzero = { workspace = true }
agentzero-brain = { workspace = true }
async-trait = "0.1"
clap_complete = "4"
dotenvy = "0.15"
chrono = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
