[package]
name = "agentzero-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
dirs = "5"
tracing-subscriber.workspace = true
url.workspace = true
