[package]
name = "agentzero-config-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Visual node graph configuration editor for AgentZero"
repository.workspace = true

[features]
default = []

[dependencies]
agentzero-config = { workspace = true }
agentzero-core = { workspace = true }
agentzero-orchestrator = { workspace = true }
anyhow.workspace = true
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
rust-embed = { version = "8", features = ["interpolate-folder-path", "include-exclude"] }
mime_guess = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
