[package]
name = "agentzero-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agentzero-common = { workspace = true }
agentzero-tools = { workspace = true }
config.workspace = true
dotenvy.workspace = true
serde.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
temp-env = "0.3"
