[package]
name = "agentzero-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
agentzero-core = { workspace = true }
agentzero-tools = { workspace = true }
config.workspace = true
dotenvy.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
temp-env = "0.3"
