[package]
name = "agentzero-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration loading and security policy mapping for AgentZero"
repository.workspace = true

[features]
default = []
yaml-policy = ["dep:serde_yaml"]

[dependencies]
anyhow.workspace = true
agentzero-connectors = { workspace = true }
agentzero-core = { workspace = true }
agentzero-tools = { workspace = true, features = ["tools-extended"] }
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = { version = "0.9", optional = true }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
temp-env = "0.3"
