[package]
name = "agentzero-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core traits, types, and utilities for the AgentZero runtime"
repository.workspace = true

[features]
default = []
privacy = ["dep:snow", "dep:x25519-dalek", "dep:crypto_box", "dep:base64"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dirs = "5"
futures-util.workspace = true
hmac = "0.12"
regex.workspace = true
sha1 = "0.10"
sha2.workspace = true
base64 = { version = "0.22", optional = true }
crypto_box = { workspace = true, optional = true }
snow = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
