[package]
name = "agentzero-cron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
agentzero-storage = { workspace = true }
anyhow.workspace = true
serde.workspace = true

