[package]
name = "agentzero-crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
agentzero-common = { workspace = true }
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
