[package]
name = "agentzero-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
agentzero-common = { workspace = true }
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
