[package]
name = "agentzero-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
agentzero-storage = { workspace = true }
anyhow.workspace = true
serde.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
] }

