[package]
name = "agentzero-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Foreign function interface for AgentZero — Swift, Kotlin, Python, TypeScript bindings"
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "agentzero_ffi"

[features]
default = ["uniffi"]
uniffi = ["dep:uniffi"]
uniffi-cli = ["uniffi", "uniffi/cli"]
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
agentzero-core = { workspace = true }
agentzero-runtime = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UniFFI (default) — Swift, Kotlin, Python
uniffi = { version = "0.27", optional = true }

# napi-rs (opt-in) — TypeScript/Node.js
napi = { version = "2", features = ["async", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi-cli"]
