[package]
name = "agentzero-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[features]
default = []
privacy = ["agentzero-core/privacy", "dep:base64"]
telemetry = ["agentzero-infra/telemetry"]
tls = ["dep:axum-server"]

[dependencies]
anyhow.workspace = true
agentzero-config = { workspace = true }
agentzero-core = { workspace = true }
agentzero-infra = { workspace = true }
agentzero-storage = { workspace = true, features = ["pool"] }
agentzero-channels = { workspace = true }
agentzero-orchestrator = { workspace = true }
agentzero-providers = { workspace = true }
base64 = { version = "0.22", optional = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"
async-stream = "0.3"
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle = "2"
axum-server = { workspace = true, features = ["tls-rustls"], optional = true }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util = "0.1"
reqwest = { workspace = true, features = ["rustls-tls"] }
tower = "0.5"
