[package]
name = "agentzero-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP/WebSocket gateway server for AgentZero"
repository.workspace = true

[features]
default = []
privacy = ["agentzero-core/privacy", "dep:base64"]
telemetry = ["agentzero-infra/telemetry"]
tls = ["dep:axum-server", "dep:rustls", "dep:rustls-pemfile"]
embedded-ui = ["dep:rust-embed", "dep:mime_guess"]
autopilot = []
local-model = ["agentzero-infra/local-model"]

[dependencies]
anyhow.workspace = true
agentzero-config = { workspace = true }
agentzero-core = { workspace = true }
agentzero-infra = { workspace = true, features = ["tools-extended"] }
agentzero-storage = { workspace = true, features = ["pool"] }
agentzero-channels = { workspace = true }
agentzero-orchestrator = { workspace = true }
agentzero-providers = { workspace = true }
base64 = { version = "0.22", optional = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"
async-stream = "0.3"
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
hmac = "0.12"
sha2.workspace = true
subtle = "2"
axum-server = { workspace = true, features = ["tls-rustls"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
rust-embed = { version = "8", features = ["include-exclude"], optional = true }
mime_guess = { version = "2", optional = true }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
toml.workspace = true
agentzero-tools = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
reqwest = { workspace = true, features = ["rustls-tls"] }
tempfile = "3.27.0"
tower = "0.5"
