[package]
name = "agentzero-hardware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
