[package]
name = "agentzero-index"
version = "0.1.0"
description = "Document indexing and semantic query engine for AgentZero"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentzero-core = { workspace = true }
agentzero-tracing = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
text-splitter = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
