[package]
name = "agentzero-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = ["memory-sqlite"]
memory-sqlite = []
memory-turso = ["agentzero-storage/memory-turso"]
wasm-plugins = ["dep:agentzero-plugins"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
agentzero-auth = { workspace = true }
agentzero-config = { workspace = true }
agentzero-core = { workspace = true }
agentzero-tools = { workspace = true }
agentzero-storage = { workspace = true }
agentzero-plugins = { workspace = true, features = ["wasm-runtime"], optional = true }
agentzero-providers = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
agentzero-testkit = { workspace = true }
temp-env = "0.3"
