[package]
name = "agentzero-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
publish = false

[features]
default = ["memory-sqlite", "document-tools"]
memory-sqlite = []
document-tools = ["agentzero-tools/document-tools"]
memory-turso = ["agentzero-storage/memory-turso"]
wasm-plugins = ["dep:agentzero-plugins"]
wasm-jit = ["wasm-plugins", "agentzero-plugins/wasm-jit"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tracing-subscriber"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
agentzero-auth = { workspace = true }
agentzero-config = { workspace = true }
agentzero-core = { workspace = true }
agentzero-tools = { workspace = true }
agentzero-storage = { workspace = true }
agentzero-plugins = { workspace = true, features = ["wasm-runtime"], optional = true }
agentzero-providers = { workspace = true }
opentelemetry = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
agentzero-orchestrator = { workspace = true }
agentzero-testkit = { workspace = true }
temp-env = "0.3"
